Thu Feb 19 15:39:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl_ocsp.c (ossl_ocspbres_verify): OCSP_basic_verify
	  returns positive value on success, not non-zero.  [ruby-core:21762]

Wed Feb 18 12:35:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_extname): fix for spaces before extention.
	  [ruby-dev:38044]

Wed Feb 18 10:29:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (thread_start_func_2): do not delete main thread from
	  living_threads.  [ruby-core:19385], [ruby-core:22158]

Tue Feb 17 05:41:08 2009  Koichi Sasada  <ko1@atdot.net>

	* compile.c: fix to add "ensure" codes across "while" clause
	  before "return" expression.  [ruby-dev:37967]

	* bootstraptest/test_flow.rb: add a test.

Sun Feb 15 11:45:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_define_hooked_variable): suppress false assertion
	  with VC9.  [ruby-core:22115]

Fri Feb 13 15:11:11 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_eval.c (eval_string_with_cref): use rb_vm_get_ruby_level_next_cfp() 
	  instead of vm_get_ruby_level_caller_cfp().  checking a upper frame
	  is not enough.  [ruby-dev:37984]

	* proc.c, vm_core.h: declare rb_vm_get_ruby_level_next_cfp()
	  on vm_core.h.

Thu Feb 12 22:51:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (hide_obj): OBJ_FREEZE() is not an expression.  a patch
	  from nagachika <nagachika00 AT gmail.com> at [ruby-dev:37977].

	* compile.c (insn_set_sc_state): fixed typoe.

Thu Feb 12 19:42:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (compile_array_, defined_expr, iseq_compile_each): hide
	  and freeze internal literal objects, to prevent from modifying.
	  [ruby-dev:37959]

	* iseq.c (insn_operand_intern): copy internal literal objects.

	* insns.def (putstring, duparray): ditto.

	* string.c (rb_str_replace): exported.

Thu Feb 12 17:17:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
